have image correct but trouble with word wrap.  save so I dont loose it

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,17 +3,8 @@
     box-sizing: border-box;
 }
 
-body, html {
-    background-color: royalblue;
-    min-height: 100%;
-    color: red ;
-    background-position: center;
-    background-size: cover;
-}
-
 header {
     margin-bottom: 20px;
-    background:orange;
 }
 
 nav {
@@ -25,14 +16,14 @@ a.navbar-brand {
     font-size: 30px;
 }
 
-
-.ul {
-    font-size: 20px;
-}
-
 #mainCard {
     margin-top: 5%;
     margin-left: 15%;
+}
+
+.float-left {
+    float: left;
+    margin-right: 25px;
 }
 
 h1 {
@@ -48,23 +39,18 @@ p {
 
 /* image margins */
 .img-thumbnail {
+    float: left;
     max-width: 50%;
     margin: 50px;
 }
 
 /* footer */
-footer {
-    margin-top: 20px;
-    border-top: 5px;
-    border-color: teal;
-    border-style: solid;
-    background-color: teal;
-}
-
-.footer {
+.footer  > .container {
     position: fixed;
-    bottom: 0%;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    height: 60px;
-    background-color: black
+    background-color: black;
+    color: white;
+    text-align: center;
 }
